fix(music_player): current song title no longer overlaps tracklist if title too long

--- a/week-10/music_player/assets/styles/current-song.css
+++ b/week-10/music_player/assets/styles/current-song.css
@@ -19,7 +19,9 @@
 
 .current-song .song-info {
     display: inline-block;
-    width: 50%;
+    width: 85%;
+    max-height: 60px;
+    overflow: auto;
     font-size: 20px;
 }
 
